start variant analysis with freebayes and pedigree file

--- a/config.yml
+++ b/config.yml
@@ -11,7 +11,10 @@ LANES_NUMBER: 4
 
 ILLUMINA_FOLDER: "/DATAS/illumina/nextseq/170522_NB501647_0005_AHMHGVBGX2"
 ILLUMINA_SAMPLESHEET : "/DATAS/illumina/nextseq/170522_NB501647_0005_AHMHGVBGX2/SampleSheet20170522MedExome.csv"
-
+TARGET_BED_FILE: "MedExome_hg19_capture_targets.bed"
+TARGET_BED_SLOP : 10
+VCF_QUAL: 20
+PEDIGREE_FILE: pedigree.ped
 
 SAMPLES : 
   - CGH1008
