--- a/environment.yml
+++ b/environment.yml
@@ -7,19 +7,53 @@ channels:
 dependencies:
 - bcftools=1.5=3
 - bwa=0.7.15=1
+- filechunkio=1.6=py36_0
 - freebayes=1.1.0=py36_3
+- ftputil=3.2=py36_0
 - htslib=1.3.2=0
+- pysftp=0.2.9=py36_0
 - sambamba=0.6.6=0
 - samtools=1.5=2
+- snakemake=4.0.0=py36_1
 - snpeff=4.3.1q=0
 - snpsift=4.3.1p=py36_0
 - trimmomatic=0.36=5
 - vt=2015.11.10=1
+- aioeasywebdav=2.2.0=py36_0
+- aiohttp=2.0.7=py36_0
+- asn1crypto=0.22.0=py36_0
+- async-timeout=1.2.1=py36_0
 - bzip2=1.0.6=1
+- certifi=2017.7.27.1=py36_0
+- cffi=1.10.0=py36_0
+- chardet=3.0.4=py36_0
+- cryptography=1.9=py36_0
 - curl=7.54.1=0
+- docutils=0.14=py36_0
+- dropbox=7.3.1=py36_0
+- idna=2.5=py36_0
 - krb5=1.14.2=0
 - libssh2=1.8.0=1
+- multidict=2.1.4=py36_0
+- pandas=0.20.3=py36_1
+- paramiko=2.2.1=py36_0
+- psutil=5.2.2=py36_0
+- pyasn1=0.3.3=py36_0
+- pycparser=2.18=py36_0
+- pynacl=1.1.2=py36_0
+- pyopenssl=17.2.0=py36_0
+- pysocks=1.6.7=py36_0
+- python-dateutil=2.6.1=py36_0
+- pytz=2017.2=py36_0
+- pyyaml=3.12=py36_1
+- requests=2.18.4=py36_1
+- six=1.10.0=py36_1
+- urllib3=1.22=py36_0
+- wrapt=1.10.11=py36_0
+- yaml=0.1.6=0
+- yarl=0.10.0=py36_0
 - zlib=1.2.8=3
+- bcrypt=3.1.3=py36_0
 - dbus=1.10.20=0
 - expat=2.1.0=0
 - fontconfig=2.12.1=3
@@ -35,6 +69,8 @@ dependencies:
 - libpng=1.6.30=1
 - libxcb=1.12=1
 - libxml2=2.9.4=0
+- mkl=2017.0.3=0
+- numpy=1.13.1=py36_0
 - openjdk=8.0.121=1
 - openssl=1.0.2l=0
 - pcre=8.39=1
